--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,6 +8,7 @@ edition = "2021"
 
 [dependencies]
 dioxus = { version = "0.6.0" }
+humansize = "2.1.3"
 
 # Needed for running Vortex operations
 vortex = { git = "https://github.com/spiraldb/vortex.git", rev = "020b329" }
