--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,6 +9,7 @@ edition = "2021"
 [dependencies]
 bytes = "1.9.0"
 dioxus = { version = "0.6.0" }
+dioxus-free-icons = { version = "0.9.0", features = ["hero-icons-solid"] }
 humansize = "2.1.3"
 
 # Needed for running Vortex operations
