--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,6 +11,7 @@ bytes = "1.9.0"
 dioxus = { version = "0.6.0" }
 dioxus-free-icons = { version = "0.9.0", features = ["hero-icons-solid"] }
 humansize = "2.1.3"
+reqwest = "0.12"
 
 # Needed for running Vortex operations
 vortex = { git = "https://github.com/spiraldb/vortex.git", rev = "e64ab4a" }
